# indigo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Configure.cmake  Deploy.cmake  GenerateImage.cmake  aarch64-none-elf.cmake
lib/: CMakeLists.txt
lib/kio/: CMakeLists.txt
lib/kio/include/kio/: gpio.h  mmio.h  sleep.h  uart.h
lib/kio/lib/: gpio.cc  sleep.cc  uart.cc
lib/klog/: CMakeLists.txt
lib/klog/include/klog/: debug.h  print.h
lib/klog/lib/: debug.cc
src/: CMakeLists.txt  boot.S  device_tree.cc  device_tree.h  entry.cc  entry.h  layout.ld
src/native/: halt.S  halt.h
src/startup/: boot.S  entry.cc  entry.h
src/stubs/: frt.cc
